--- a/Views/SaExciseDuty/Index.cshtml
+++ b/Views/SaExciseDuty/Index.cshtml
@@ -93,8 +93,7 @@
                   $('#SaExciseDuty').jqGrid('setCell',curRowId,'productSku',getProductSku(ui.item.value));
                   $('input#productSku').val(getProductSku(ui.item.value));
                     
-                } });   
-            }
+                } });  }
                    }},
                    { label: 'Supplier',name: 'supplierName',fixed:true,width:170 ,editable: true, edittype:"text", editoptions: {readonly: 'readonly'}},
                    { label: 'Product Sku',name: 'productSku',fixed:true,width:80,editable: true, edittype:"text", editoptions: {readonly: 'readonly'}},
@@ -111,9 +110,6 @@
                editurl: 'SaExciseDuty/Update',              
 
            })
-               
-
-
 
            $('#SaExciseDuty').navGrid('#jqGridPager',
                // the buttons to appear on the toolbar of the grid
@@ -141,17 +137,38 @@
        $(document).ready(function () {  
            $('#date').val(date());
        });
+
        $('#SaExciseDuty').setGridWidth(parseInt($(window).width()) - 20);
+       
        $("#comments").on('change keyup paste', function () {
            SearchByComments();
        });
+
        $("#date").on('change keyup paste', function () {
            SearchByDate();
-       }); 
+       });
+       
        $("#save").on('click', function () {
            SaveHeader();
-        });
-        $(document).ready(function () {  
+       });
+
+       $(document).ready(function () 
+       {  
+            $.ajaxSetup( { "async": false } );
+            $.getJSON('SaExciseDuty/SaCode', function(data) 
+            {
+                if(data!=null)
+                {
+                    header= true;
+                    $("#saCode").val(data.sacode);
+                    $("#date").val(data.date);
+                    $("#comments").val(data.comments);
+                }
+            });
+            $.ajaxSetup( { "async": true } );
+       });
+
+       $(document).ready(function () {  
        $.ajax({  
            type: "GET",  
            url: "SaExciseDuty/CreateLocationList",  
@@ -164,51 +181,51 @@
                $("#locationsDropdown").html(s);  
            }  
        });  
-   });
+       });
               
-    function IsProduct(value,colname)
-        {
+       function IsProduct(value,colname)
+       {
             var containsProduct = false;
             $.ajaxSetup( { "async": false } );
-            $.getJSON('SaExciseDuty/CreateProductName', function(data) {
-                if (data != null) {
+            $.getJSON('SaExciseDuty/CreateProductName', function(data) 
+            {
+                if (data != null) 
+                {
                     for (var i = 0; i < data.length; i++) 
+                    {
+                        if(value== data[i].value)
                         {
-                            // console.log(data[i].value);
-                            if(value== data[i].value)
-                                {
-                                containsProduct = true;
-                                }
+                            containsProduct = true;
                         }
-                    }//if
-        });
-        if(containsProduct==true)
-        {
-            $.ajaxSetup( { "async": true } );
-            return [true,""];
-        }
-        else{
-        $.ajaxSetup( { "async": true } );
-            
-        return [false,"Please Enter Valid Product"];
-        }
+                    }
+                }//if
+            });
+            if(containsProduct==true)
+            {
+                $.ajaxSetup( { "async": true } );
+                return [true,""];
+            }
+            else
+            {
+                $.ajaxSetup( { "async": true } );
+                return [false,"Please Enter Valid Product"];
+            }
 
-    }
+       }
 
-    function date()
-        {
-         var date;
-         var currentDate = new Date();
-         var day = ("0" + currentDate.getDate()).slice(-2);
-         var month = ("0" + (currentDate.getMonth() + 1)).slice(-2);
-         var today = currentDate.getFullYear() + "-" + (month) + "-" + (day);
-         date = today.toString();
-         return date;
-        }
+       function date()
+       {
+             var date;
+             var currentDate = new Date();
+             var day = ("0" + currentDate.getDate()).slice(-2);
+             var month = ("0" + (currentDate.getMonth() + 1)).slice(-2);
+             var today = currentDate.getFullYear() + "-" + (month) + "-" + (day);
+             date = today.toString();
+             return date;
+       }
     
-    function SaveHeader()
-        {
-            
+       function SaveHeader()
+       {    
             console.log($("#date").val());
             var date = $("#date").val();
             var notes = $("#comments").val();
@@ -216,11 +233,12 @@
             if(locationsDropdown!=-1)
             {
                 header = true;
-            $.ajaxSetup( { "async": false } );
-            $.getJSON('SaExciseDuty/CreateHeader?data='+date+'/'+ locationsDropdown+'/'+ notes, function(data) {
-                $("#saCode").val(data);
-                 });
-            $.ajaxSetup( { "async": true } );
+                $.ajaxSetup( { "async": false } );
+                $.getJSON('SaExciseDuty/CreateHeader?data='+date+'/'+ locationsDropdown+'/'+ notes, function(data) 
+                {
+                    $("#saCode").val(data);
+                });
+                $.ajaxSetup( { "async": true } );
             }
             else
             {
@@ -229,8 +247,8 @@
             $('#SaExciseDuty').setGridParam({ page: 1 }).trigger("reloadGrid");
         }
 
-    function SearchByComments()
-        {
+       function SearchByComments()
+       {
             //  Fetch the text from our <input> control
             var searchString = $("#comments").val();
         
@@ -246,10 +264,10 @@
             grid[0].p.search = f.rules.length > 0;
             $.extend(grid[0].p.postData, { filters: JSON.stringify(f) });
             grid.trigger("reloadGrid", [{ page: 1 }]);
-        }
+       }
 
-    function SearchByDate()
-        {
+       function SearchByDate()
+       {
             //  Fetch the text from our <input> control
             var searchString = $("#date").val();
         
@@ -265,97 +283,102 @@
             grid[0].p.search = f.rules.length > 0;
             $.extend(grid[0].p.postData, { filters: JSON.stringify(f) });
             grid.trigger("reloadGrid", [{ page: 1 }]);
-        }
+       }
 
-    function getSupplierNames(value) 
-        {
+       function getSupplierNames(value) 
+       {
             var Supplier="";
             $.ajaxSetup( { "async": false } );
-            $.getJSON('InvAdj/CreateList', function(data) {
-            if (data != null) {
-           
-                for (var i = 0; i < data.length; i++) {
-                    if(value === data[i].value)
+            $.getJSON('InvAdj/CreateList', function(data) 
+            {
+                if (data != null) 
+                {
+                    for (var i = 0; i < data.length; i++) 
                     {
+                        if(value === data[i].value)
+                        {
+                            Supplier= data[i].text;
+                        }
+                    } 
+                }//if
 
-                 Supplier= data[i].text;
+            });
+            $.ajaxSetup( { "async": true } );
+            return Supplier; 
+       }
+
+       function getProductSku(value) 
+       {
+            $.ajaxSetup( { "async": false } );
+            $.getJSON('SaExciseDuty/CreateProductSkuList', function(data) 
+            {
+                if (data != null) 
+                {
+                    for (var i = 0; i < data.length; i++) 
+                    {
+                        if(data[i].value== value)
+                        {
+                            ProductSku=data[i].text;
+                        }  
                     }
-                    } 
                 }//if
 
-                });
-                $.ajaxSetup( { "async": true } );
-               return Supplier; 
-        }
+            });
+            $.ajaxSetup( { "async": true } );
+            return ProductSku.toString(); 
+       }
 
-    function getProductSku(value) 
-        {
+       function getProductName() 
+       {
             $.ajaxSetup( { "async": false } );
-            $.getJSON('SaExciseDuty/CreateProductSkuList', function(data) {
-            if (data != null) {
-                for (var i = 0; i < data.length; i++) {
-                    if(data[i].value== value)
-                    {
-
-                 ProductSku=data[i].text;
-                    } 
-                  }
-                }//if
-
-                });
-                $.ajaxSetup( { "async": true } );
-               return ProductSku.toString(); 
-        }
-
-    function getProductName() 
-        {
-            $.ajaxSetup( { "async": false } );
-            $.getJSON('SaExciseDuty/CreateProductName', function(data) {
-                if (data != null) {
+            $.getJSON('SaExciseDuty/CreateProductName', function(data) 
+            {
+                if (data != null) 
+                {
                     for (var i = 0; i < data.length; i++) 
                     {
                         ProductNameList[i]=data[i].value;
                     }
-                 }//if
+                }//if
+            });
+            $.ajaxSetup( { "async": true } );
+            return ProductNameList; 
+       }
 
-                }
-             );
-                $.ajaxSetup( { "async": true } );
-  
-               return ProductNameList; 
-        }
-
-    function getLocation() 
-        {
+       function getLocation() 
+       {
             var LocationList= {};
             $.ajaxSetup( { "async": false } );
-            $.getJSON('SaExciseDuty/CreateLocationList', function(data) {
-            if (data != null) {
-                for (var i = 0; i < data.length; i++) {
-                 LocationList[data[i].value]=data[i].text;
-                  }
-             }//if
+            $.getJSON('SaExciseDuty/CreateLocationList', function(data) 
+            {
+                if (data != null) 
+                {
+                    for (var i = 0; i < data.length; i++) 
+                    {
+                        LocationList[data[i].value]=data[i].text;
+                    }
+                }//if
              });
              $.ajaxSetup( { "async": true } );
-             
              return LocationList; 
-        }
+       }
 
-    function getReasons() 
-        {
+       function getReasons() 
+       {
             var ReasonsList= {};
             $.ajaxSetup( { "async": false } );
-            $.getJSON('SaExciseDuty/CreateReasonsList', function(data) {
-            if (data != null) {
-                for (var i = 0; i < data.length; i++) {
-                 ReasonsList[data[i].value]=data[i].text;
-                 }
-             }//if
-             });
+            $.getJSON('SaExciseDuty/CreateReasonsList', function(data) 
+            {
+                if (data != null) 
+                {
+                    for (var i = 0; i < data.length; i++) 
+                    {
+                        ReasonsList[data[i].value]=data[i].text;
+                    }
+                }//if
+            });
             $.ajaxSetup( { "async": true } );
-             
             return ReasonsList; 
-        }
-
+       }
 </script>
 }
