--- a/Views/SaInternalTransfer/Index.cshtml
+++ b/Views/SaInternalTransfer/Index.cshtml
@@ -157,77 +157,95 @@
        $("#save").on('click', function () {
            SaveHeader();
         });
-               $(document).ready(function () {  
-       $.ajax({  
-           type: "GET",  
-           url: "SaInternalTransfer/CreateLocationList",  
-           data: "{}",  
-           success: function (data) {  
-               var s = '<option value="-1">Select a From Location</option>';  
-               for (var i = 0; i < data.length; i++) {  
-                   s += '<option value="' + data[i].value + '">' + data[i].text + '</option>';  
+
+        $(document).ready(function () {  
+           $.ajax({  
+               type: "GET",  
+               url: "SaInternalTransfer/CreateLocationList",  
+               data: "{}",  
+               success: function (data) {  
+                   var s = '<option value="-1">Select a From Location</option>';  
+                   for (var i = 0; i < data.length; i++) {  
+                       s += '<option value="' + data[i].value + '">' + data[i].text + '</option>';  
+                   }  
+                   $("#fromLocationsDropdown").html(s);  
                }  
-               $("#fromLocationsDropdown").html(s);  
-           }  
-       });  
-   });
-                  $(document).ready(function () {  
-       $.ajax({  
-           type: "GET",  
-           url: "SaInternalTransfer/CreateLocationList",  
-           data: "{}",  
-           success: function (data) {  
-               var s = '<option value="-1">Select a To Location</option>';  
-               for (var i = 0; i < data.length; i++) {  
-                   s += '<option value="' + data[i].value + '">' + data[i].text + '</option>';  
+           });  
+        });
+       $(document).ready(function () {  
+           $.ajax({  
+               type: "GET",  
+               url: "SaInternalTransfer/CreateLocationList",  
+               data: "{}",  
+               success: function (data) {  
+                   var s = '<option value="-1">Select a To Location</option>';  
+                   for (var i = 0; i < data.length; i++) {  
+                       s += '<option value="' + data[i].value + '">' + data[i].text + '</option>';  
+                   }  
+                   $("#toLocationsDropdown").html(s);   
                }  
-               $("#toLocationsDropdown").html(s);   
-           }  
-       });  
-   });
+           });  
+       });
+
+       $(document).ready(function () {  
+        $.ajaxSetup( { "async": false } );
+        $.getJSON('saInternalTransfer/SaCode', function(data) {
+         if(data!=null)
+         {
+              header= true;
+              $("#saCode").val(data.sacode);
+              $("#date").val(data.date);
+              $("#comments").val(data.comments);
+              $("#fromLocationsDropdown").val(data.fromLocation);
+              $("#toLocationsDropdown").val(data.toLocation);
+              console.log($("#fromLocationsDropdown").val());
+         }
+        });
+        $.ajaxSetup( { "async": true } );
+        });
               
-    function IsProduct(value,colname)
-        {
+       function IsProduct(value,colname)
+       {
             var containsProduct = false;
             $.ajaxSetup( { "async": false } );
-            $.getJSON('saInternalTransfer/CreateProductName', function(data) {
-                if (data != null) {
+            $.getJSON('saInternalTransfer/CreateProductName', function(data) 
+            {
+                if (data != null) 
+                {
                     for (var i = 0; i < data.length; i++) 
+                    {
+                        if(value== data[i].value)
                         {
-                            // console.log(data[i].value);
-                            if(value== data[i].value)
-                                {
-                                containsProduct = true;
-                                }
+                            containsProduct = true;
                         }
-                    }//if
-        });
-        if(containsProduct==true)
-        {
-            $.ajaxSetup( { "async": true } );
-            return [true,""];
-        }
-        else{
-        $.ajaxSetup( { "async": true } );
-            
-        return [false,"Please Enter Valid Product"];
-        }
+                    }
+                }//if
+            });
+            if(containsProduct==true)
+            {
+                $.ajaxSetup( { "async": true } );
+                return [true,""];
+            }
+            else
+            {
+                $.ajaxSetup( { "async": true } );
+                return [false,"Please Enter Valid Product"];
+            }
+       }
 
-    }
-
-    function date()
-        {
-         var date;
-         var currentDate = new Date();
-         var day = ("0" + currentDate.getDate()).slice(-2);
-         var month = ("0" + (currentDate.getMonth() + 1)).slice(-2);
-         var today = currentDate.getFullYear() + "-" + (month) + "-" + (day);
-         date = today.toString();
-         return date;
-        }
+       function date()
+       {
+             var date;
+             var currentDate = new Date();
+             var day = ("0" + currentDate.getDate()).slice(-2);
+             var month = ("0" + (currentDate.getMonth() + 1)).slice(-2);
+             var today = currentDate.getFullYear() + "-" + (month) + "-" + (day);
+             date = today.toString();
+             return date;
+       }
     
-    function SaveHeader()
-        {
+       function SaveHeader()
+       {
             console.log($("#date").val());
             var date = $("#date").val();
             var notes = $("#comments").val();
@@ -236,11 +254,11 @@
             if(fromLocationsDropdown !=-1 && toLocationsDropdown !=-1)
             {
                 header = true;
-            $.ajaxSetup( { "async": false } );
-            $.getJSON('saInternalTransfer/CreateHeader?data='+date+'/'+ toLocationsDropdown+'/'+fromLocationsDropdown+'/'+ notes, function(data) {
-                $("#saCode").val(data);
+                $.ajaxSetup( { "async": false } );
+                $.getJSON('saInternalTransfer/CreateHeader?data='+date+'/'+ toLocationsDropdown+'/'+fromLocationsDropdown+'/'+ notes, function(data) {
+                    $("#saCode").val(data);
                  });
-            $.ajaxSetup( { "async": true } );
+                $.ajaxSetup( { "async": true } );
             }
             else if(fromLocationsDropdown==-1 && toLocationsDropdown==-1)
             {
@@ -255,10 +273,10 @@
                  alert("Error: Enter A From Location");
             }
              $('#saInternalTransfer').setGridParam({ page: 1 }).trigger("reloadGrid");
-        }
+       }
 
-    function SearchByComments()
-        {
+       function SearchByComments()
+       {
             //  Fetch the text from our <input> control
             var searchString = $("#comments").val();
         
@@ -274,10 +292,10 @@
             grid[0].p.search = f.rules.length > 0;
             $.extend(grid[0].p.postData, { filters: JSON.stringify(f) });
             grid.trigger("reloadGrid", [{ page: 1 }]);
-        }
+       }
 
-    function SearchByDate()
-        {
+       function SearchByDate()
+       {
             //  Fetch the text from our <input> control
             var searchString = $("#date").val();
         
@@ -293,53 +311,57 @@
             grid[0].p.search = f.rules.length > 0;
             $.extend(grid[0].p.postData, { filters: JSON.stringify(f) });
             grid.trigger("reloadGrid", [{ page: 1 }]);
-        }
+       }
 
-    function getSupplierNames(value) 
-        {
+       function getSupplierNames(value) 
+       {
             var Supplier="";
             $.ajaxSetup( { "async": false } );
-            $.getJSON('InvAdj/CreateList', function(data) {
-            if (data != null) {
-           
-                for (var i = 0; i < data.length; i++) {
-                    if(value === data[i].value)
+            $.getJSON('InvAdj/CreateList', function(data) 
+            {
+                if (data != null) 
+                {
+                    for (var i = 0; i < data.length; i++) 
                     {
+                         if(value === data[i].value)
+                         {
+                            Supplier= data[i].text;
+                         }
+                    } 
+                }//if
 
-                 Supplier= data[i].text;
+            });
+            $.ajaxSetup( { "async": true } );
+            return Supplier; 
+       }
+
+       function getProductSku(value) 
+       {
+            $.ajaxSetup( { "async": false } );
+            $.getJSON('saInternalTransfer/CreateProductSkuList', function(data) 
+            {
+                if (data != null) 
+                {
+                    for (var i = 0; i < data.length; i++) 
+                    {
+                        if(data[i].value== value)
+                        {
+                            ProductSku=data[i].text;
+                        } 
                     }
-                    } 
                 }//if
+            });
+            $.ajaxSetup( { "async": true } );
+            return ProductSku.toString(); 
+       }
 
-                });
-                $.ajaxSetup( { "async": true } );
-               return Supplier; 
-        }
-
-    function getProductSku(value) 
-        {
+       function getProductName() 
+       {
             $.ajaxSetup( { "async": false } );
-            $.getJSON('saInternalTransfer/CreateProductSkuList', function(data) {
-            if (data != null) {
-                for (var i = 0; i < data.length; i++) {
-                    if(data[i].value== value)
-                    {
-
-                 ProductSku=data[i].text;
-                    } 
-                  }
-                }//if
-
-                });
-                $.ajaxSetup( { "async": true } );
-               return ProductSku.toString(); 
-        }
-
-    function getProductName() 
-        {
-            $.ajaxSetup( { "async": false } );
-            $.getJSON('saInternalTransfer/CreateProductName', function(data) {
-                if (data != null) {
+            $.getJSON('saInternalTransfer/CreateProductName', function(data) 
+            {
+                if (data != null) 
+                {
                     for (var i = 0; i < data.length; i++) 
                     {
                         ProductNameList[i]=data[i].value;
@@ -348,42 +370,44 @@
 
                 }
              );
-                $.ajaxSetup( { "async": true } );
-  
-               return ProductNameList; 
-        }
+             $.ajaxSetup( { "async": true } );
+             return ProductNameList; 
+       }
 
-    function getLocation() 
-        {
+       function getLocation() 
+       {
             var LocationList= {};
             $.ajaxSetup( { "async": false } );
-            $.getJSON('saInternalTransfer/CreateLocationList', function(data) {
-            if (data != null) {
-                for (var i = 0; i < data.length; i++) {
-                 LocationList[data[i].value]=data[i].text;
-                  }
-             }//if
+            $.getJSON('saInternalTransfer/CreateLocationList', function(data) 
+            {
+                if (data != null) 
+                {
+                    for (var i = 0; i < data.length; i++) 
+                    {
+                        LocationList[data[i].value]=data[i].text;
+                    }
+                }//if
              });
              $.ajaxSetup( { "async": true } );
-             
              return LocationList; 
-        }
+       }
 
-    function getReasons() 
-        {
+       function getReasons() 
+       {
             var ReasonsList= {};
             $.ajaxSetup( { "async": false } );
-            $.getJSON('saInternalTransfer/CreateReasonsList', function(data) {
-            if (data != null) {
-                for (var i = 0; i < data.length; i++) {
-                 ReasonsList[data[i].value]=data[i].text;
-                 }
-             }//if
-             });
+            $.getJSON('saInternalTransfer/CreateReasonsList', function(data) 
+            {
+                if (data != null) 
+                {
+                    for (var i = 0; i < data.length; i++) 
+                    {
+                        ReasonsList[data[i].value]=data[i].text;
+                    }
+                }//if
+            });
             $.ajaxSetup( { "async": true } );
-             
             return ReasonsList; 
         }
-
 </script>
 }
