-filling header from summary sainternal and saoutbound

--- a/Views/SaDamageRecoup/Index.cshtml
+++ b/Views/SaDamageRecoup/Index.cshtml
@@ -144,21 +144,23 @@
        $("#save").on('click', function () {
            SaveHeader();
         });
-        $(document).ready(function () 
-        {  
-            $.ajaxSetup( { "async": false } );
-            $.getJSON('SaDamageRecoup/SaCode', function(data) 
-            {
-                if(data!=null)
-                {
-                    header= true;
-                    $("#saCode").val(data.sacode);
-                    $("#date").val(data.date);
-                    $("#comments").val(data.comments);
-                }
-            });
-            $.ajaxSetup( { "async": true } );
-        });
+        $(document).ready(function () {  
+           $.ajax({  
+               type: "GET",  
+               url: "saDamageRecoup/SaCode",  
+               data: "{}",  
+               success: function (data) {  
+                   if(data!=null)
+                   {
+                      header= true;
+                      $("#saCode").val(data.sacode);
+                      $("#date").val(data.date);
+                      $("#comments").val(data.comments);
+                   }
+               }  
+           });  
+       });
+
                       
         function IsProduct(value,colname)
         {
